--- a/templates/catagories/history.html
+++ b/templates/catagories/history.html
@@ -97,10 +97,10 @@
         <img src="{{ url_for('static', filename='/img/history/IMG_3263.jpg') }}">
     </div>
     <div class="grid-item">
-        <img src="{{ url_for('static', filename='/img/history/restoration_8.jpg') }}">
+        <img src="{{ url_for('static', filename='img/history/restoration_8.jpg') }}">
     </div>
     <div class="grid-item">
-        <img src="{{ url_for('static', filename='img/history/IMG_5220.jpg') }}">
+        <img src="{{ url_for('static', filename='img/history/oldbarn.jpg') }}">
     </div>
     <div class="grid-item">
         <video autoplay loop muted playsinline>
