--- a/templates/catagories/vineyard.html
+++ b/templates/catagories/vineyard.html
@@ -17,6 +17,9 @@
 
 <div class="gridtitle">
     <div class="pagetitle">Vineyard</div>
+</div>
+<img class="hero" src="{{ url_for('static', filename='/img/vineyard/vineyard.jpg') }}" alt="History Image">
+</div>
     <div class="grid">
         <div class="grid-item wide">
             <img src="{{ url_for('static', filename='/img/vineyard/IMG_4189.jpg') }}">
