more videos and smoothing

--- a/templates/catagories/history.html
+++ b/templates/catagories/history.html
@@ -69,15 +69,15 @@
         
 <p>HERITAGE.</p>
 
-<div class="ender">
-    To restore a farm is to restore life itself.
-</div>
+
         
  </div>
  <img class="hero" src="{{ url_for('static', filename='/img/hero/NIGHT_HERO_LONG.jpg') }}" alt="History Image">
 </div>
 
-<div class="stopper"></div>
+<div class="ender">
+    To restore a farm is to restore life itself.
+</div>
 
 
 <div class="grid">
@@ -107,18 +107,10 @@
             <source src="{{ url_for('static', filename='/img/history/farmscope.mp4') }}" type="video/mp4">
         </video>
         </div>
-        <div class="grid-item">
-            <img src="{{ url_for('static', filename='img/history/resto3.png') }}">
-        </div>
-    <div class="grid-item">
-        <img src="{{ url_for('static', filename='/img/history/IMG_0035.jpg') }}">
-    </div>
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/history/interior/IMG_1178.jpg') }}">
     </div>
-    <div class="grid-item">
-        <img src="{{ url_for('static', filename='/img/history/before/IMG_3174.jpg') }}">
-    </div>
+ 
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/history/resto10.jpg') }}">
     </div>
@@ -140,9 +132,7 @@
             <source src="{{ url_for('static', filename='/img/history/interior/canoehanging.mp4') }}" type="video/mp4">
         </video>
         </div>
-        <div class="grid-item">
-            <img src="{{ url_for('static', filename='/img/history/resto23.jpg') }}">
-        </div>
+    
         <div class="grid-item">
             <img src="{{ url_for('static', filename='/img/history/before/IMG_4130.jpg') }}">
         </div>
@@ -153,12 +143,14 @@
             <source src="{{ url_for('static', filename='/img/history/foundation.mp4') }}" type="video/mp4">
         </video>
         </div>
+ 
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/history/interior/IMG_1067.jpg') }}">
     </div>
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/history/restoration 10.jpg') }}">
     </div>
+
    
     <div class="grid-item">
         <video autoplay loop muted playsinline>
@@ -170,13 +162,14 @@
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/history/interior/IMG_1763.jpg') }}">
     </div>
+    <div class="grid-item">
+        <img src="{{ url_for('static', filename='/img/history/resto23.jpg') }}">
+    </div>
     
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/history/interior/IMG_4611.jpg') }}">
     </div>
-    <div class="grid-item">
-        <img src="{{ url_for('static', filename='/img/history/before/IMG_6148.jpg') }}">
-    </div>
+
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/history/interior/IMG_4738.jpg') }}">
     </div>
@@ -192,20 +185,9 @@
         <img src="{{ url_for('static', filename='/img/history/interior/bar2.jpg') }}">
     </div>
     <!--before images-->
-    <div class="grid-item">
-        <img src="{{ url_for('static', filename='/img/history/before/IMG_2922.jpg') }}">
-    </div>
    
     <div class="grid-item">
-        <video autoplay loop muted playsinline>
-            <source src="{{ url_for('static', filename='/img/history/before/oldbarntreetrimming.mp4') }}" type="video/mp4">
-        </video>
-    </div>
-    <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/history/interior/IMG_4610.jpg') }}">
-    </div>
-    <div class="grid-item">
-        <img src="{{ url_for('static', filename='/img/history/before/IMG_3276.jpg') }}">
     </div>
    
     
@@ -226,13 +208,21 @@
         <div class="grid-item">
             <img src="{{ url_for('static', filename='/img/history/resto1.jpg') }}">
         </div>
+        <div class="grid-item">
+            <img src="{{ url_for('static', filename='/img/history/before/IMG_3276.jpg') }}">
+        </div>
+        <div class="grid-item">
+            <video autoplay loop muted playsinline>
+                <source src="{{ url_for('static', filename='/img/history/before/oldbarntreetrimming.mp4') }}" type="video/mp4">
+            </video>
+        </div>
     
 </div>
 
 <div class="story">
-    <p>It frightened me, when I first laid eyes on the the farm. Like a once 
-            
-        grand lady, now down-at-heel, faded and forgotten, a battered kind 
+    It frightened me, when I first laid eyes on the the farm.</div> 
+    
+   <div class="T2"> <p>Like a once grand lady, now down-at-heel, faded and forgotten, a battered kind 
         
         of beauty. There was a melancholy feeling to everything. And there 
         
@@ -273,7 +263,7 @@
         
         can’t quite name  your own kin. This is that story, This is the story of</p> 
         
-        <p> The Farm.</p> 
+        <div class="story"> The Farm.</div>
     </div>
 
 
