--- a/templates/catagories/vineyard.html
+++ b/templates/catagories/vineyard.html
@@ -19,22 +19,60 @@
     <div class="pagetitle">Vineyard</div>
 </div>
 <img class="hero" src="{{ url_for('static', filename='/img/vineyard/vineyard.jpg') }}" alt="History Image">
-</div>
+
     <div class="grid">
-        <div class="grid-item wide">
+        <div class="grid-item">
+            <video autoplay loop muted playsinline>
+                <source src="{{ url_for('static', filename='/img/vineyard/tractor.mp4') }}" type="video/mp4">
+            </video>
+        </div>  
+        <div class="grid-item">
             <img src="{{ url_for('static', filename='/img/vineyard/IMG_4189.jpg') }}">
         </div> 
         <div class="grid-item">
-            <img src="{{ url_for('static', filename='/img/vineyard/IMG_0134.jpg') }}">
-        </div>
+            <video autoplay loop muted playsinline>
+                <source src="{{ url_for('static', filename='/img/vineyard/bees.mp4') }}" type="video/mp4">
+            </video>
+        </div>  
+        <div class="grid-item">
+            <video autoplay loop muted playsinline>
+                <source src="{{ url_for('static', filename='/img/vineyard/compost.mp4') }}" type="video/mp4">
+            </video>
+            </div>
+            <div class="grid-item">
+                <video autoplay loop muted playsinline>
+                    <source src="{{ url_for('static', filename='/img/vineyard/grapes.mp4') }}" type="video/mp4">
+                </video>
+            </div>  
+     
         <div class="grid-item">
             <img src="{{ url_for('static', filename='/img/vineyard/IMG_0275.jpg') }}">
         </div>
         <div class="grid-item">
+            <video autoplay loop muted playsinline>
+                <source src="{{ url_for('static', filename='/img/vineyard/beekeeper.mp4') }}" type="video/mp4">
+            </video>
+            </div>
+            <div class="grid-item">
+                <video autoplay loop muted playsinline>
+                    <source src="{{ url_for('static', filename='/img/vineyard/crane.mp4') }}" type="video/mp4">
+                </video>
+            </div>  
+        <div class="grid-item">
             <img src="{{ url_for('static', filename='/img/vineyard/IMG_0553.png') }}">
         </div>
         <div class="grid-item">
+            <video autoplay loop muted playsinline>
+                <source src="{{ url_for('static', filename='/img/vineyard/tractor3.mp4') }}" type="video/mp4">
+            </video>
+        </div> 
+        <div class="grid-item">
             <img src="{{ url_for('static', filename='/img/vineyard/IMG_1423.jpg') }}">
+        </div>  
+        <div class="grid-item">
+            <video autoplay loop muted playsinline>
+                <source src="{{ url_for('static', filename='/img/vineyard/harvest.mp4') }}" type="video/mp4">
+            </video>
         </div>       
         <div class="grid-item">
             <img src="{{ url_for('static', filename='/img/vineyard/IMG_3443.jpg') }}">
@@ -48,21 +86,27 @@
         <div class="grid-item">
             <img src="{{ url_for('static', filename='/img/vineyard/IMG_6699.jpg') }}">
         </div>      
-         <div class="grid-item wide">
+         <div class="grid-item">
             <img src="{{ url_for('static', filename='/img/vineyard/IMG_8177.jpg') }}">
+        </div>  
+        <div class="grid-item">
+            <video autoplay loop muted playsinline>
+                <source src="{{ url_for('static', filename='/img/vineyard/harvest2.mp4') }}" type="video/mp4">
+            </video>
         </div>    
          <div class="grid-item">
              <img src="{{ url_for('static', filename='/img/vineyard/IMG_8230.jpg') }}">
         </div>
-        <div class="grid-item">
-            <video autoplay loop muted playsinline>
-                <source src="{{ url_for('static', filename='/img/vineyard/crane.mp4') }}" type="video/mp4">
-            </video>
-            </div>
+
+            <div class="grid-item">
+                <video autoplay loop muted playsinline>
+                    <source src="{{ url_for('static', filename='/img/vineyard/tractor2.mp4') }}" type="video/mp4">
+                </video>
+            </div>  
         <div class="grid-item">
              <img src="{{ url_for('static', filename='/img/vineyard/IMG_8258.jpg') }}">
         </div>
-        <div class="grid-item wide">
+        <div class="grid-item">
             <img src="{{ url_for('static', filename='/img/vineyard/IMG_1046.jpg') }}">
         </div> 
         <div class="grid-item">
@@ -75,12 +119,7 @@
             </div>
        <div class="grid-item">
             <img src="{{ url_for('static', filename='/img/vineyard/IMG_8716.jpg') }}">
-        </div>
-        <div class="grid-item">
-            <video autoplay loop muted playsinline>
-                <source src="{{ url_for('static', filename='/img/vineyard/harvest2.mp4') }}" type="video/mp4">
-            </video>
-    </div>
+        </div> 
 </div>
 
 <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
