--- a/templates/menu.html
+++ b/templates/menu.html
@@ -19,7 +19,7 @@
     
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            const text = "The Farm catalogues the work of Beth Nelson and her multidisciplinary role, managing, restoring and creating narrative for one historic property in Sonoma County, California.";
+            const text = "The work of Beth Nelson and her multidisciplinary role, managing, restoring and creating narrative for one historic property in Sonoma County, California.";
             let index = 0;
             const typingTextElement = document.getElementById("typingText");
             const mainContent = document.getElementById("mainContent");
