--- a/static/styles/catagories/contact.css
+++ b/static/styles/catagories/contact.css
@@ -14,11 +14,8 @@ body{
     margin-left: 0px;
     display: flex;
     width: 100%;
-    justify-content: space-between;
     margin-right: 15px;
-    position: relative;
-    padding-bottom: 50px;
-}
+    position: relative;}
 .story {
     padding-top: 15px;
     font-style: italic !important;
@@ -45,30 +42,27 @@ img {
     
 }
 
+
 .ender {
     position: relative;
-    justify-content: center;
-    align-items: center;
     width: 100%;
     display: flex;
     height: 100vh;
+    padding-top: 30px;
 }
 
 video{
     height: 100vh;
     width: auto;
-    justify-content: center;
-    align-items: center;
 }
 .end{
-    display: flex;
-    flex-direction: column; /* Stack elements vertically */
-    align-items: center; /* Center horizontally */
-    justify-content: center; /* Center vertically if needed */
-    text-align: center;
-    padding-top: 50px;
+    padding-top: 25px;
     padding-bottom: 100px;
+    padding-left: 200px;
 }
+
+
+
 h3{
     margin-top: 5px;
     font-family: "adobe-garamond-pro", serif;
@@ -80,7 +74,6 @@ h3{
   
 }
 h4{
-    margin-bottom: 5px;
     width: 100%;
     padding-top: 0;
     font-size: 1em;
@@ -93,9 +86,12 @@ h4{
     line-height: 0;
     display: block;
 }
+.underline h1 {
+    text-decoration: underline;
+}
 
 h1 {
-    width: 100%;
+   
     padding-top: 0;
     font-size: 1em;
     font-family: "adobe-garamond-pro", serif;
@@ -104,6 +100,8 @@ h1 {
     font-size: 1.2em;
     color: white;
     padding-right: 15px;
+    padding-top: 35vh;
+    line-height: 1.5em;
 }
 
 h2{
@@ -119,7 +117,11 @@ h2{
     padding-bottom: 1.5em; 
 }
 
-@media (max-width: 1250px) {}
+@media (max-width: 1100px) {
+    h1 {
+        padding-top: 30vh;
+    }
+}
     
 
 @media (max-width: 850px) {
@@ -139,6 +141,19 @@ h2{
 .contact { 
     z-index: 1;
 }
+h1 {
+    padding-top: 30px;
+}
+
+.ender {
+    justify-content: left;
+    display: block;
+    overflow: none;
+    padding-right: 15px;
+    padding-top: 0;
+    margin-left: 0;
+
+}
 }
 
 @media (max-width: 640px) {
@@ -153,8 +168,5 @@ h2{
         padding-left: 0;
 }
 
-h1 {
-    width: 80vw;
-}
 }
 
