--- a/static/styles/catagories/history.css
+++ b/static/styles/catagories/history.css
@@ -63,8 +63,29 @@ html, body {
   justify-content: center;
   z-index: 1;
   overflow: visible;
-  width: 100%
+  width: 100%;
+  font-size: 1.2em;
 }
+
+.story {
+  font-size: 2em;
+  font-family: "adobe-garamond-pro", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 4.5em;
+  color: white;
+  padding-left: 50px;
+  padding-top: 1.5em;
+  line-height: 1.3em;
+  width: 70%; 
+}
+.T2 p {
+  width: 80%;
+  font-size: 1.2em;
+  line-height: 1.3 !important;
+  padding-left: 50px;
+}
+
 
 .ender {
   font-family: "adobe-garamond-pro", serif;
@@ -73,8 +94,7 @@ html, body {
   font-size: 2em;
   line-height: 1em;
   color: white;
-  margin-bottom: 1.5em;
-  margin-top: 2em;
+  margin-bottom: 30px;
   width: 100%;
   text-align: center;
   justify-content: center;
@@ -88,15 +108,11 @@ p {
   font-family: "adobe-garamond-pro", serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 1em;
   line-height: .7em;
   color: white;
   margin-bottom: 0;
-  text-align: center;
-  justify-content: center;
+
 }
-
-
 
 .grid {
   position: relative; /* Required for Packery */
@@ -125,7 +141,7 @@ p {
   width: 100%; /* Example wider item */
 }
 
-@media (min-width: 640px) {
+@media (max-width: 640px) {
   .grid-item { width: 50% }
 }
 @media (min-width: 960px) {
@@ -144,30 +160,46 @@ p {
   .grid-item { width: 14.2857% }
 }
 
+
+@media (max-width: 1100px) {
+  .ender{
+    padding-top: 6em;
+  }
+
+ 
+  }
+
+  @media (max-width: 980px)
+  {
+    .ender {
+      padding-top: 12em
+    }
+  }
+
+@media (max-width: 850px) {
+  .ender {
+    padding-top: 18em;
+  }
+}
+
+@media (max-width: 700px) {
+  .ender {
+    padding-top: 22em;
+  }
+}
+
 @media (max-width: 640px) {
   .pagetitle {
     font-size: 3em;
     padding-top: 6.4em;
+
+  }
+  .ender {
+    padding-top: 25em;
   }
 
+  .story {
+    font-size: 2em;
 }
 
-@media (max-width: 1100px) {
-  .grid{
-    padding-top: 20em;
-  }
- 
-  }
-
-
-@media (max-width: 850px) {
-  .grid {
-    padding-top: 30em;
-  }
-}
-
-@media (max-width: 680px) {
-  .grid {
-    padding-top: 40em;
-  }
 }
