--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -13,22 +13,19 @@ padding-top: 5%;
     font-family: "adobe-garamond-pro", serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 1em;
-    color: white;  
+        color: white; 
+        font-size: 1.2em;
 }
 
 .credits{
     padding-left: 175px;
-    width: 25%;
+    width: 50%;
 }
 
 p {
-    font-family: "adobe-garamond-pro", serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 1em;
-    color: white;   
-}
+font-size: 1em;}
+
+
 
 @media (max-width: 640px) {
     .credits {
