--- a/templates/catagories/preserving.html
+++ b/templates/catagories/preserving.html
@@ -36,6 +36,16 @@
         <img src="{{ url_for('static', filename='/img/preserving/p1.jpg') }}">
     </div>
     <div class="grid-item">
+        <video autoplay loop muted playsinline>
+            <source src="{{ url_for('static', filename='/img/preserving/walnutdye.mp4') }}" type="video/mp4">
+        </video>
+    </div>
+    <div class="grid-item">
+        <video autoplay loop muted playsinline>
+            <source src="{{ url_for('static', filename='/img/preserving/sauce.mp4') }}" type="video/mp4">
+        </video>
+    </div>
+    <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/preserving/IMG_4144.jpg') }}">
     </div>
     <div class="grid-item">
@@ -44,11 +54,7 @@
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/preserving/IMG_6457.jpg') }}">
     </div>
-    <div class="grid-item">
-        <video autoplay loop muted playsinline>
-            <source src="{{ url_for('static', filename='/img/preserving/walnutdye.mp4') }}" type="video/mp4">
-        </video>
-    </div>
+
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/preserving/IMG_6645.jpg') }}">
     </div>
@@ -57,6 +63,11 @@
     </div>
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/preserving/03.jpg') }}">
+    </div>
+    <div class="grid-item">
+        <video autoplay loop muted playsinline>
+            <source src="{{ url_for('static', filename='/img/preserving/cider.mp4') }}" type="video/mp4">
+        </video>
     </div>
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/preserving/IMG_6997.jpg') }}">
@@ -74,7 +85,9 @@
         <img src="{{ url_for('static', filename='/img/preserving/IMG_7864.jpg') }}">
     </div>
     <div class="grid-item">
-        <img src="{{ url_for('static', filename='/img/preserving/IMG_7949.jpg') }}">
+        <video autoplay loop muted playsinline>
+            <source src="{{ url_for('static', filename='/img/preserving/cider2.mp4') }}" type="video/mp4">
+        </video>
     </div>
     <div class="grid-item">
         <video autoplay loop muted playsinline>
@@ -87,6 +100,8 @@
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/preserving/IMG_8216.jpg') }}">
     </div>
+
+ 
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/preserving/IMG_8270.jpg') }}">
     </div>
@@ -100,23 +115,38 @@
         <img src="{{ url_for('static', filename='/img/preserving/IMG_8681.jpg') }}">
     </div>
     <div class="grid-item">
+        <video autoplay loop muted playsinline>
+            <source src="{{ url_for('static', filename='/img/preserving/pulp.mp4') }}" type="video/mp4">
+        </video>
+    </div>
+    <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/preserving/IMG_0507.jpg') }}">
     </div>
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/preserving/IMG_8716.jpg') }}">
     </div>
     <div class="grid-item">
+        <video autoplay loop muted playsinline>
+            <source src="{{ url_for('static', filename='/img/preserving/labels.mp4') }}" type="video/mp4">
+        </video>
+    </div>
+    <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/preserving/IMG_9268.jpg') }}">
     </div>
+
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/preserving/02.jpg') }}">
     </div>
     <div class="grid-item">
-        <img src="{{ url_for('static', filename='/img/preserving/IMG_5093.jpg') }}">
+        <video autoplay loop muted playsinline>
+            <source src="{{ url_for('static', filename='/img/preserving/cider3.mp4') }}" type="video/mp4">
+        </video>
     </div>
+
+
 </div>
 
-{% include 'footer.html' %}
+{% include 'footerpreserve.html' %}
 
 <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
 <script src="https://unpkg.com/packery@2.1.2/dist/packery.pkgd.min.js"></script>
