--- a/static/styles/catagories/contact.css
+++ b/static/styles/catagories/contact.css
@@ -15,7 +15,8 @@ body{
     display: flex;
     width: 100%;
     margin-right: 15px;
-    position: relative;}
+    position: relative;
+}
 .story {
     padding-top: 15px;
     font-style: italic !important;
@@ -44,21 +45,19 @@ img {
 
 
 .ender {
-    position: relative;
     width: 100%;
-    display: flex;
     height: 100vh;
-    padding-top: 30px;
+    padding-top: 15vh;
+    display: flex;
 }
 
 video{
     height: 100vh;
     width: auto;
+    padding-right: 100px;
 }
 .end{
-    padding-top: 25px;
-    padding-bottom: 100px;
-    padding-left: 200px;
+    padding-left: 15px;
 }
 
 
@@ -83,8 +82,8 @@ h4{
     font-size: 1.2em;
     color: white;
     padding-bottom: 0; 
-    line-height: 0;
-    display: block;
+    line-height: 1.3em;
+
 }
 .underline h1 {
     text-decoration: underline;
@@ -100,7 +99,7 @@ h1 {
     font-size: 1.2em;
     color: white;
     padding-right: 15px;
-    padding-top: 35vh;
+    padding-top: 15vh;
     line-height: 1.5em;
 }
 
@@ -117,14 +116,12 @@ h2{
     padding-bottom: 1.5em; 
 }
 
-@media (max-width: 1100px) {
-    h1 {
-        padding-top: 30vh;
-    }
+@media (max-width: 1275px) {
+   
 }
     
 
-@media (max-width: 850px) {
+@media (max-width: 920px) {
     .beth {
         justify-content: left;
         display: block;
@@ -150,9 +147,17 @@ h1 {
     display: block;
     overflow: none;
     padding-right: 15px;
-    padding-top: 0;
-    margin-left: 0;
+    padding-top: 30px;
+    padding-left: 15px;
 
+}
+.end {
+    padding-top: 75px;
+}
+
+video {
+    height: 100vh;
+    width: auto;
 }
 }
 
