--- a/static/styles/catagories/hospitality.css
+++ b/static/styles/catagories/hospitality.css
@@ -1,3 +1,7 @@
+*{
+  background: rgb(255, 255, 255);
+}
+
 .gridtitle {
     position: relative;
 }
@@ -6,49 +10,34 @@
     font-family: "adobe-garamond-pro", serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 4.5em;
+    font-size: 2em;
     padding-top: 4em;
-    color: white;
-    padding-left: 200px;
+    color: rgb(0, 0, 0);
     line-height: 1em;
-    position: absolute;
+    
     z-index: 1;
+    text-align: center;
+    justify-content: center;
+    
+  }
+
+  .image {
+    padding-top: 100px;
+    width: 100%;
+    height: auto;
+    justify-content: center;
+    display: flex;
+    align-items: center;
   }
   @media (max-width: 800px) {
-    .pagetitle {
-      padding-left: 15px;
-    }
+
   }
 
   @media (max-width: 640px) {
-    .pagetitle{
-      font-size: 3em;
-      padding-top: 6.4em;
-    }
+  
   }
 
-  .grid {
-    position: relative; /* Required for Packery */
-    width: 100%; /* Full width of the container */
-    margin: 0 auto; /* Center the grid on the page */
-    z-index: 0;
-    min-height: 100vh;
-  }
-  
-  .grid-item {
-    position: absolute; 
-    width: 100%;
-    height: auto;
-    box-sizing: border-box;
-    padding: 3px;
-  }
 
-  
-  .grid-item img {
-    display: block;
-    width: 100%;
-    height: auto;
-  }
 
 @media (min-width: 640px)  {.grid-item {width: 50%}}
 @media (min-width: 960px)  {.grid-item {width: 33.333%}}
