--- a/templates/contact.html
+++ b/templates/contact.html
@@ -37,6 +37,7 @@
     <div class=end>
             <h4>This site was designed and coded by <a href="https://new-graphics-2000.org/" target="_blank">N-G-2</a> in collaboration with Beth Nelson</h4>
             <h4>Song by <a href="https://www.instagram.com/sea.beetle/" target="_blank">@seabeatle</a> </h4>
+            <h4>All images © Beth Nelson</h4>
     </div>
 
     <div>
