--- a/templates/footerpreserve.html
+++ b/templates/footerpreserve.html
@@ -7,7 +7,7 @@
      <div class="credits">
       <p>"In my grandfather's time, it was believed that spirits existed everywhere... in trees, rivers, insects, wells, anything...
          I like the idea that we should all treasure everything, because spirits might exist there,
-         and we should treasure everything because there is a kind of like to everything" <br>
+         and we should treasure everything because there is a kind of life to everything" <br>
         (Hayao Miyazaki)</p>
       </div>
     </div>
