--- a/static/styles/catagories/contact.css
+++ b/static/styles/catagories/contact.css
@@ -148,16 +148,19 @@ h1 {
     overflow: none;
     padding-right: 15px;
     padding-top: 30px;
-    padding-left: 15px;
 
 }
 .end {
     padding-top: 75px;
+    padding-left: 15px;
 }
 
 video {
     height: 100vh;
     width: auto;
+    padding-left: 0;
+    margin-left: 0;
+    padding-right: 15px;
 }
 }
 
