--- a/static/styles/catagories/hospitality.css
+++ b/static/styles/catagories/hospitality.css
@@ -18,23 +18,54 @@
     z-index: 1;
     text-align: center;
     justify-content: center;
-    
+
+
   }
 
-  .image {
-    padding-top: 100px;
+  .hero {
+    padding-top: 150px;
     width: 100%;
-    height: auto;
     justify-content: center;
-    display: flex;
     align-items: center;
+    display: flex;
   }
-  @media (max-width: 800px) {
 
+  video {
+    width: 500px;
+    height: auto;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .content {
+    display: flex;
+    justify-content: center; /* Center content horizontally */
+    padding-top: 150px;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Two equal columns */
+    gap: 20px; /* Space between images */
+    max-width: 60vw; /* Adjust width as needed */
+}
+
+.image img {
+    width: 100%; /* Make images fully responsive */
+    height: auto; /* Maintain aspect ratio */
+    display: block;
+}
+
+  @media (max-width: 1100px) {
+.grid-container {
+  max-width: 80vw;
+}
   }
 
   @media (max-width: 640px) {
-  
+    .grid-container {
+      max-width: 98vw;
+    }
   }
 
 
