--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -9,7 +9,7 @@ padding-top: 5%;
 
 
 .footmenu{
-    display:flex;
+    display: flex;
     font-family: "adobe-garamond-pro", serif;
     font-weight: 400;
     font-style: normal;
@@ -20,6 +20,14 @@ padding-top: 5%;
 .credits{
     padding-left: 175px;
     width: 50%;
+}
+
+.edu {
+    font-family: "adobe-garamond-pro", serif;
+    font-weight: 400;
+    font-style: normal;
+        color: black; 
+        font-size: 1.2em;
 }
 
 p {
