--- a/templates/catagories/history.html
+++ b/templates/catagories/history.html
@@ -76,7 +76,7 @@
 </div>
 
 <div class="ender">
-    To restore a farm is to restore life itself.
+    "To restore a farm is to restore life itself."
 </div>
 
 
@@ -97,10 +97,10 @@
         <img src="{{ url_for('static', filename='/img/history/IMG_3263.jpg') }}">
     </div>
     <div class="grid-item">
-        <img src="{{ url_for('static', filename='img/history/restoration_8.jpg') }}">
+        <img src="{{ url_for('static', filename='img/history/old_barn_2.jpg') }}">
     </div>
     <div class="grid-item">
-        <img src="{{ url_for('static', filename='img/history/oldbarn.jpg') }}">
+        <img src="{{ url_for('static', filename='img/history/old_barn.jpg') }}">
     </div>
     <div class="grid-item">
         <video autoplay loop muted playsinline>
@@ -263,7 +263,7 @@
         
         can’t quite name  your own kin. This is that story, This is the story of</p> 
         
-        <div class="story"> The Farm.</div>
+        <div class="storytwo"> The Farm.</div>
     </div>
 
 
