--- a/static/styles/catagories/history.css
+++ b/static/styles/catagories/history.css
@@ -24,7 +24,7 @@ html, body {
   min-height: 100vh;
   width: 100%;
   overflow: visible;
-  padding-bottom: 10%
+  
 }
 
 .pagetitle {
@@ -79,6 +79,19 @@ html, body {
   line-height: 1.3em;
   width: 70%; 
 }
+
+.storytwo {
+  font-size: 2em;
+  font-family: "adobe-garamond-pro", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 4.5em;
+  color: white;
+  text-align: right;
+  line-height: 1.3em;
+  padding-top: 30px;
+  width: 70%; 
+}
 .T2 p {
   width: 80%;
   font-size: 1.2em;
@@ -94,7 +107,7 @@ html, body {
   font-size: 2em;
   line-height: 1em;
   color: white;
-  margin-bottom: 30px;
+  margin-bottom: 8em;
   width: 100%;
   text-align: center;
   justify-content: center;
@@ -161,45 +174,71 @@ p {
 }
 
 
-@media (max-width: 1100px) {
+@media (max-width: 1320px) {
   .ender{
-    padding-top: 6em;
+    padding-top: 3em;
+  }
   }
 
- 
+  @media (max-width: 1240px) {
+    .ender{
+      padding-top: 6em;
+    }
+    }
+
+@media (max-width: 1160px) {
+  .ender{
+    padding-top: 9em;
+  }
   }
 
-  @media (max-width: 980px)
+  @media (max-width: 1080px)
   {
     .ender {
       padding-top: 12em
     }
   }
 
-@media (max-width: 850px) {
+@media (max-width: 1000px) {
+  .ender {
+    padding-top: 15em;
+  }
+}
+
+@media (max-width: 920px) {
   .ender {
     padding-top: 18em;
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 840px) {
   .ender {
-    padding-top: 22em;
+    padding-top: 21em;
   }
 }
 
-@media (max-width: 640px) {
-  .pagetitle {
-    font-size: 3em;
-    padding-top: 6.4em;
-
-  }
+@media (max-width: 760px) {
   .ender {
-    padding-top: 25em;
+    padding-top: 24em;
   }
 
+}
+
+@media (max-width: 680px) {
+  .ender {
+    padding-top: 27em;
+  }
   .story {
     font-size: 2em;
 }
+.storytwo {
+  font-size: 2em;
+  width: 100%;
+  padding-right:15px;
+}
+.pagetitle {
+  font-size: 3em;
+  padding-top: 6.4em;
 
+}
 }
