--- a/templates/footervineyard.html
+++ b/templates/footervineyard.html
@@ -5,8 +5,10 @@
     <div class="footmenu">
      <p>2025 The Farm</p>
      <div class="credits">
-      <p>All things are delicately interconnected.</p>
+      <p>"All things are delicately interconnected."</p>
+      <p>(Jenny Holtzer)</p>
       </div>
+  
     </div>
 
   </footer>
