--- a/static/styles/catagories/contact.css
+++ b/static/styles/catagories/contact.css
@@ -3,11 +3,10 @@ body{
     padding:0;
 }
 .contact {
-    padding-top: 5px;
+    padding-top: 50vh;
     padding-left: 15px;
     display: inline-block;
     overflow: none; 
-    padding-bottom: 10vh; 
 }
 
 .beth {
@@ -47,17 +46,12 @@ img {
 .ender {
     width: 100%;
     height: 100vh;
-    padding-top: 15vh;
     display: flex;
 }
 
 video{
     height: 100vh;
     width: auto;
-    padding-right: 100px;
-}
-.end{
-    padding-left: 15px;
 }
 
 
@@ -73,9 +67,7 @@ h3{
   
 }
 h4{
-    width: 100%;
-    padding-top: 0;
-    font-size: 1em;
+     font-size: 1em;
     font-family: "adobe-garamond-pro", serif;
     font-weight: 400;
     font-style: normal;
@@ -83,10 +75,17 @@ h4{
     color: white;
     padding-bottom: 0; 
     line-height: 1.3em;
+    padding-left: 15px;
+   display: block;
 
 }
 .underline h1 {
     text-decoration: underline;
+}
+
+.cred{
+    padding-left: 15px;
+    padding-top: 40vh;
 }
 
 h1 {
@@ -96,10 +95,10 @@ h1 {
     font-family: "adobe-garamond-pro", serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 1.2em;
+    font-size: 1.5em;
     color: white;
     padding-right: 15px;
-    padding-top: 15vh;
+    padding-top: 30px;
     line-height: 1.5em;
 }
 
@@ -136,31 +135,43 @@ h2{
         padding-left: 0;
 }
 .contact { 
-    z-index: 1;
+    padding-top: 30px;
 }
 h1 {
     padding-top: 30px;
 }
 
-.ender {
-    justify-content: left;
-    display: block;
+}
+
+
+@media (max-width: 800px) {
+    .ender {
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
     overflow: none;
-    padding-right: 15px;
-    padding-top: 30px;
+    align-items: center;
+    width: 100%;
+
 
 }
-.end {
-    padding-top: 75px;
-    padding-left: 15px;
-}
-
 video {
     height: 100vh;
     width: auto;
     padding-left: 0;
     margin-left: 0;
     padding-right: 15px;
+    align-items: center;
+    justify-content: center;
+}
+
+.end{
+    justify-content: center;
+    align-items: center;
+}
+.cred{
+    padding-top: 0px;
+    text-align: center;
 }
 }
 
