--- a/templates/credits.html
+++ b/templates/credits.html
@@ -13,7 +13,7 @@
     {% include 'navigation.html' %}
     <div class="ender">
     <audio id="audio" loop>
-        <source src="{{ url_for('static', filename='/img/contact/song.m4a') }}" type="audio/mpeg">
+        <source src="{{ url_for('static', filename='/img/contact/song.m4a') }}" type="audio/mp4">
         Your browser does not support the audio element.
     </audio>
     <video autoplay loop muted playsinline>
