--- a/templates/catagories/history.html
+++ b/templates/catagories/history.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <div>
+    {% include 'loading.html' %}
 {% include 'navigation.html' %}
 <div class="history-container">
     <div class="pagetitle">History & Restoration</div>
