--- a/templates/catagories/history.html
+++ b/templates/catagories/history.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{{ url_for('static', filename='styles/catagories/history.css') }}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='styles/catagories/catagory.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='styles/catagories/loading.css') }}" rel="stylesheet" />
     <title>History & Restoration</title>
 </head>
 <body>
+    <div id="loading-screen">
+        <h1 id="loading-text">Loading</h1>
+    </div>
+
+ <div id="main-content" style="display:none;">  
 <div>
-    {% include 'loading.html' %}
 {% include 'navigation.html' %}
 <div class="history-container">
     <div class="pagetitle">History & Restoration</div>
@@ -264,12 +269,26 @@
 
 
 {% include 'footer.html' %}
+</div>
+
+
 <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
 <script src="https://unpkg.com/packery@2.1.2/dist/packery.pkgd.min.js"></script>
 <script src="https://unpkg.com/gsap@3.10.2/dist/gsap.min.js"></script>
 <script src="https://unpkg.com/gsap@3.10.2/dist/ScrollToPlugin.min.js"></script>
 
 <script>
+
+//for loading
+window.addEventListener('load', () => {
+    // Hide the loading screen
+    const loadingScreen = document.getElementById('loading-screen');
+    const mainContent = document.getElementById('main-content');
+
+    loadingScreen.style.display = 'none'; // Hide the loading screen
+    mainContent.style.display = 'block'; // Show the main content
+});
+
   window.onload = () => {
     const grid = document.querySelector('.grid');
     const stopper = document.querySelector(".stopper");
