--- a/templates/loading.html
+++ b/templates/loading.html
@@ -1,16 +1,13 @@
-<head> <link href="{{ url_for('static', filename='styles/loading.css') }}" rel="stylesheet" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>...</title>
+    <head> <link href="{{ url_for('static', filename='styles/loading.css') }}" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.typekit.net/upe0xgu.css">
 </head>
 
 <div id="loading-screen">
     <h1 id="loading-text">Loading</h1>
 </div>
-
-<script>
-    window.addEventListener('load', () => {
-        const loadingScreen = document.getElementById('loading-screen');
-        const mainContent = document.getElementById('main-content');
-        loadingScreen.style.display = 'none'; // Hide the loading screen
-        mainContent.style.display = 'block';  // Show the main content
-    });
-</script>
