--- a/templates/catagories/preserving.html
+++ b/templates/catagories/preserving.html
@@ -7,7 +7,7 @@
     <link href="{{ url_for('static', filename='styles/base.css') }}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='styles/catagories/preserving.css') }}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='styles/catagories/catagory.css') }}" rel="stylesheet" />
-    <link href="{{ url_for('static', filename='styles/catagories/loading.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='styles/loading.css') }}" rel="stylesheet" />
 </head>
 
 
