--- a/templates/catagories/vineyard.html
+++ b/templates/catagories/vineyard.html
@@ -7,10 +7,17 @@
     <link href="{{ url_for('static', filename='styles/base.css') }}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='styles/catagories/catagory.css') }}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='styles/catagories/vineyard.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='styles/loading.css') }}" rel="stylesheet" />
+
 </head>
 
 
 <body>
+    <div id="loading-screen">
+        <h1 id="loading-text">Loading</h1>
+    </div>
+    <div id="main-content" style="display:none;">  
+
     {% include 'navigation.html' %}
 
 
@@ -122,6 +129,7 @@
 
     <div>
         {% include 'footervineyard.html' %}
+        </div>
         </div>
 
 <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
