--- a/templates/catagories/vineyard.html
+++ b/templates/catagories/vineyard.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="loading-screen">
-        <h1 id="loading-text">Loading</h1>
+        <p id="loading-text">Loading</p>
     </div>
     <div id="main-content" style="display:none;">  
 
@@ -135,6 +135,16 @@
 <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
 <script src="https://unpkg.com/packery@2.1.2/dist/packery.pkgd.min.js"></script>
 <script>
+//for loading
+window.addEventListener('load', () => {
+    // Hide the loading screen
+    const loadingScreen = document.getElementById('loading-screen');
+    const mainContent = document.getElementById('main-content');
+
+    loadingScreen.style.display = 'none'; // Hide the loading screen
+    mainContent.style.display = 'block'; // Show the main content
+});
+
     window.onload = () => {
         const grid = document.querySelector('.grid');
         if (!grid) return; // Avoid errors if grid is not found
