--- a/templates/catagories/history.html
+++ b/templates/catagories/history.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="loading-screen">
-        <h1 id="loading-text">Loading</h1>
+        <p id="loading-text">Loading</p>
     </div>
 
  <div id="main-content" style="display:none;">  
