--- a/templates/catagories/preserving.html
+++ b/templates/catagories/preserving.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="loading-screen">
-        <h1 id="loading-text">Loading</h1>
+        <p id="loading-text">Loading</p>
     </div>
     <div id="main-content" style="display:none;"> 
     {% include 'navigation.html' %}
