--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -20,15 +20,9 @@ padding-top: 5%;
 .credits{
     padding-left: 175px;
     width: 50%;
+    line-height: 1.3em;
 }
 
-.edu {
-    font-family: "adobe-garamond-pro", serif;
-    font-weight: 400;
-    font-style: normal;
-        color: black; 
-        font-size: 1.2em;
-}
 
 p {
 font-size: 1em;}
