--- a/templates/catagories/vineyard.html
+++ b/templates/catagories/vineyard.html
@@ -65,11 +65,11 @@
                 </video>
             </div>  
 
-        <!--<div class="grid-item">
+        <div class="grid-item">
             <video autoplay loop muted playsinline>
                 <source src="{{ url_for('static', filename='/img/vineyard/tractor3.mp4') }}" type="video/mp4">
             </video>
-        </div> !-->
+        </div>
         <div class="grid-item">
             <img src="{{ url_for('static', filename='/img/vineyard/IMG_1423.jpg') }}">
         </div>  
