--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -32,6 +32,7 @@ font-size: 1em;}
 
 @media (max-width: 640px) {
     .credits {
-       width: 100% 
+       width: 100%; 
+       font-size: 1.2em;
     }
 }
