--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -101,13 +101,13 @@ a {
     width: 65%;
     color: white;
     font-size: 1.5em;
+    
   }
   
   p {
     font-family: "adobe-garamond-pro", serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 1.5em;
     line-height: 1.3em;
     color: white;
     margin-bottom: 1.5em
@@ -131,9 +131,14 @@ a {
     }
     .text{
         width: 80%
+        
 
     }
-    p {
+
+}
+
+@media (max-width: 540px) {
+    .text {
         font-size: 1.2em;
     }
 }
