--- a/templates/catagories/preserving.html
+++ b/templates/catagories/preserving.html
@@ -95,7 +95,7 @@
     </div>
     <div class="grid-item">
         <video autoplay loop muted playsinline>
-            <source src="{{ url_for('static', filename='/img/preserving/preserving2.mp4') }}" type="video/mp4>
+            <source src="{{ url_for('static', filename='/img/preserving/preserving2.mp4') }}" type="video/mp4">
         </video>
     </div>
     <div class="grid-item">
