--- a/templates/footerpreserve.html
+++ b/templates/footerpreserve.html
@@ -2,14 +2,17 @@
 <link rel="stylesheet" href="https://use.typekit.net/upe0xgu.css">
 
 <footer>
+
+  <div class="credits">
+    <p>"In my grandfather's time, it was believed that spirits existed everywhere... in trees, rivers, insects, wells, anything...
+       I like the idea that we should all treasure everything, because spirits might exist there,
+       and we should treasure everything because there is a kind of life to everything." </p>
+      <p>(Hayao Miyazaki)</p>
+    </div>
     <div class="footmenu">
      <p>2025 The Farm</p>
      <div class="credits">
-      <p>"In my grandfather's time, it was believed that spirits existed everywhere... in trees, rivers, insects, wells, anything...
-         I like the idea that we should all treasure everything, because spirits might exist there,
-         and we should treasure everything because there is a kind of life to everything." <br>
-        (Hayao Miyazaki)</p>
-      </div>
+
     </div>
 
   </footer>
