--- a/templates/footervineyard.html
+++ b/templates/footervineyard.html
@@ -2,12 +2,13 @@
 <link rel="stylesheet" href="https://use.typekit.net/upe0xgu.css">
 
 <footer>
+  <div class="credits">
+    "All things are delicately interconnected."
+    <p>(Jenny Holtzer)</p>
+    </div>
     <div class="footmenu">
      <p>2025 The Farm</p>
-     <div class="credits">
-      <p>"All things are delicately interconnected."<br>
-      (Jenny Holtzer)</p>
-      </div>
+ 
   
     </div>
 
