--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -17,22 +17,46 @@ padding-top: 5%;
         font-size: 1.2em;
 }
 
+h1{
+    margin: 0;
+    font-size: .6em;
+    font-family: "adobe-garamond-pro", serif;
+    font-weight: 400;
+    font-style: normal;
+        color: white; 
+}
 .credits{
-    padding-left: 175px;
-    width: 50%;
-    line-height: 1.3em;
-    font-size: 1.5em;
+    padding-left: 220px;
+    padding-right: 220px;
+        line-height: 1.3em;
+    font-size: 2em;
+    font-family: "adobe-garamond-pro", serif;
+    font-weight: 400;
+    font-style: normal;
+        color: white; 
+        padding-bottom: 100px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
 }
 
 
-p {
+
+p{
 font-size: 1em;}
 
 
 
 @media (max-width: 640px) {
-    .credits {
-       width: 100%; 
-       font-size: 1.2em;
+    .credits { 
+       font-size: 1.5em;
+    }
+}
+
+@media (max-width: 800px) {
+    .credits { 
+       padding-left: 15px;
+       padding-right: 15px;
     }
 }
