--- a/templates/catagories/preserving.html
+++ b/templates/catagories/preserving.html
@@ -131,7 +131,7 @@
     </div>
     <div class="grid-item">
         <video autoplay loop muted playsinline>
-            <source src="{{ url_for('static', filename='/img/preserving/labels.mp4') }}" type="video/mp4">
+            <source src="{{ url_for('static', filename='/img/preserving/labels_3.mp4') }}" type="video/mp4">
         </video>
     </div>
     <div class="grid-item">
